--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,18 +40,21 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "leaflet": "^1.9.4",
-    "lucide-react": "^0.507.0",
+    "lucide-react": "^0.561.0",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "^19.2.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.56.2",
+    "react-webcam": "^7.2.0",
+    "react-dropzone": "^14.3.8",
+    "framer-motion": "^12.23.26",
     "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^3.0.1",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
     "recharts": "^3.6.0",
-    "sonner": "^2.0.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
