--- a/package.json
+++ b/package.json
@@ -38,21 +38,25 @@
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.26",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.561.0",
     "next-themes": "^0.4.6",
+    "piexifjs": "^1.0.6",
     "react": "^19.2.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.2.0",
-    "react-hook-form": "^7.56.2",
-    "react-webcam": "^7.2.0",
     "react-dropzone": "^14.3.8",
-    "framer-motion": "^12.23.26",
+    "react-geolocated": "^4.4.0",
+    "react-hook-form": "^7.56.2",
+    "react-hot-toast": "^2.6.0",
     "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^3.0.1",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.2.0",
     "recharts": "^3.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0",
