feat: Enhance PWA capabilities with offline support, push notifications, and critical data synchronization

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,81 @@
 {
   "short_name": "MDRRMO",
   "name": "MDRRMO Pio Duran Emergency App",
+  "description": "Public Preparedness for Disaster",
   "icons": [
     {
       "src": "logome.webp",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/webp"
+      "type": "image/webp",
+      "purpose": "any"
     },
     {
       "src": "logome.webp",
       "sizes": "192x192",
-      "type": "image/webp"
+      "type": "image/webp",
+      "purpose": "any"
     },
     {
       "src": "logome.webp",
       "sizes": "512x512",
-      "type": "image/webp"
+      "type": "image/webp",
+      "purpose": "any"
+    },
+    {
+      "src": "logome.webp",
+      "sizes": "192x192",
+      "type": "image/webp",
+      "purpose": "maskable"
+    },
+    {
+      "src": "logome.webp",
+      "sizes": "512x512",
+      "type": "image/webp",
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "orientation": "portrait",
+  "theme_color": "#1e3a8a",
+  "background_color": "#f8fafc",
+  "scope": "/",
+  "lang": "en",
+  "categories": ["utilities", "lifestyle"],
+  "shortcuts": [
+    {
+      "name": "Report Incident",
+      "short_name": "Report",
+      "description": "Report an incident",
+      "url": "/report-incident",
+      "icons": [{"src": "logome.webp", "sizes": "192x192"}]
+    },
+    {
+      "name": "Typhoon Dashboard",
+      "short_name": "Typhoon",
+      "description": "View current typhoon data",
+      "url": "/typhoon-dashboard",
+      "icons": [{"src": "logome.webp", "sizes": "192x192"}]
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "p1.jpeg",
+      "sizes": "1280x720",
+      "type": "image/jpeg",
+      "form_factor": "wide"
+    },
+    {
+      "src": "p2.jpeg",
+      "sizes": "1280x720",
+      "type": "image/jpeg",
+      "form_factor": "wide"
+    },
+    {
+      "src": "p3.jpeg",
+      "sizes": "720x1280",
+      "type": "image/jpeg",
+      "form_factor": "narrow"
+    }
+  ]
 }
